--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -5,6 +5,21 @@
   "Username": "Username",
   "Password": "Password",
   "admin": "admin",
-  "lbl_firing_ratio" : "Firing ratio"
-
+  "lbl_firing_ratio" : "Firing ratio",
+  "Logout": "Logout",
+  "Confirm Logout": "Confirm Logout",
+  "Are you sure you want to logout?": "Are you sure you want to logout?",
+  "ao1_label": "AO1",
+  "ao1_placeholder": "Enter AO1 value",
+  "ao2_label": "AO2",
+  "ao2_placeholder": "Enter AO2 value",
+  "act_mode_firing_ratio_label": "Firing Ratio (%)",
+  "act_mode_firing_ratio_placeholder": "Enter firing ratio (0-100)",
+  "manual": "Manual",
+  "auto": "Auto",
+  "tron": "TRON",
+  "reset": "Reset",
+  "testmode": "TESTMODE",
+  "select_item": "Select an Item",
+  "selected_item": "Selected Item"
 }
